hphp/hack/test/typecheck/splat/splat_multiple.php.exp
ERROR: File "splat_multiple.php", line 7, characters 12-16:
Too many splat operators `...`. An argument list can have at most one splat operator. (Parsing[1002])
